--- a/Viewer/Pages/Charts/LineChart.razor
+++ b/Viewer/Pages/Charts/LineChart.razor
@@ -1,27 +1,22 @@
 ﻿@using ChartJs.Blazor.LineChart
 @using SmokViewer.Data
 @using static SmokViewer.SampleUtils
-<h3>LineChart</h3>
 
 <Chart Config="_config" @ref="_chart"></Chart>
 
-<button @onclick="RandomizeData">Randomize Data</button>
-<button @onclick="AddDataset">Add Dataset</button>
-<button @onclick="RemoveDataset">Remove Dataset</button>
-<button @onclick="AddData">Add Data</button>
-<button @onclick="RemoveData">Remove Data</button>
+@*<button @onclick="RandomizeData">Randomize Data</button>
+    <button @onclick="AddDataset">Add Dataset</button>
+    <button @onclick="RemoveDataset">Remove Dataset</button>
+    <button @onclick="AddData">Add Data</button>
+    <button @onclick="RemoveData">Remove Data</button>*@
 
 @code {
-    private const int InitalCount = 7;
     private LineConfig _config;
     private Chart _chart;
-
-    [Parameter]
-    public IEnumerable<Measurement> Measurements { get; set; }
+    private IEnumerable<MeasurementsDataSet> _measurements = default!;
 
     protected override void OnInitialized()
     {
-
         _config = new LineConfig
             {
                 Options = new LineOptions
@@ -29,8 +24,8 @@
                     Responsive = true,
                     Title = new OptionsTitle
                     {
-                        Display = true,
-                        Text = "ChartJs.Blazor Line Chart"
+                        Display = false,
+                        Text = "Temperature"
                     },
                     Tooltips = new Tooltips
                     {
@@ -46,117 +41,145 @@
                     {
                         XAxes = new List<CartesianAxis>
                     {
-                        new CategoryAxis
+                        new TimeAxis
                         {
                             ScaleLabel = new ScaleLabel
                             {
-                                LabelString = "Month"
-                            }
+                                LabelString = "Date"
+                            },
+                            Time = new TimeOptions
+                            {
+                                TooltipFormat = "ll HH:mm",
+                                Round = TimeMeasurement.Hour
+                            },
+                            Distribution = TimeDistribution.Linear,
+                            Bounds = ScaleBound.Ticks
                         }
                     },
                         YAxes = new List<CartesianAxis>
-                    {
-                        new LinearCartesianAxis
                         {
-                            ScaleLabel = new ScaleLabel
+                            new LinearCartesianAxis
                             {
-                                LabelString = "Value"
+                                ScaleLabel = new ScaleLabel
+                                {
+                                    LabelString = "Value"
+                                }
                             }
                         }
                     }
-                    }
                 }
             };
-
-        IDataset<int> dataset1 = new LineDataset<int>(RandomScalingFactor(InitalCount))
-            {
-                Label = "My first dataset",
-                BackgroundColor = ColorUtil.FromDrawingColor(ChartColors.Red),
-                BorderColor = ColorUtil.FromDrawingColor(ChartColors.Red),
-                Fill = FillingMode.Disabled
-            };
-
-        IDataset<int> dataset2 = new LineDataset<int>(RandomScalingFactor(InitalCount))
-            {
-                Label = "My second dataset",
-                BackgroundColor = ColorUtil.FromDrawingColor(ChartColors.Blue),
-                BorderColor = ColorUtil.FromDrawingColor(ChartColors.Blue),
-                Fill = FillingMode.Disabled
-            };
-
-        _config.Data.Labels.AddRange(Months.Take(InitalCount));
-        _config.Data.Datasets.Add(dataset1);
-        _config.Data.Datasets.Add(dataset2);
     }
 
-    private void RandomizeData()
+    public void UpdateChartData(IEnumerable<MeasurementsDataSet> measurementDataSets)
     {
-        foreach (IDataset<int> dataset in _config.Data.Datasets)
+        _measurements = measurementDataSets;
+
+        UpdateChart(TimeScaleOptions.Option24h);
+    }
+
+    public void UpdateChart(TimeScaleOptions options)
+    {
+        _config.Data.Datasets.Clear();
+        foreach (var measurementDataSet in _measurements)
         {
-            int count = dataset.Count;
-            dataset.Clear();
-            dataset.AddRange(RandomScalingFactor(count));
+            var data = measurementDataSet.Data;
+
+            if (options == TimeScaleOptions.Option24h)
+                data = data.Where(x => x.date > DateTime.UtcNow.AddDays(-1));
+            else if (options == TimeScaleOptions.Option3d)
+                data = data.Where(x => x.date > DateTime.UtcNow.AddDays(-3));
+            else
+                data = data.Where(x => x.date > DateTime.UtcNow.AddDays(-7));
+
+            var results = data
+              .GroupBy(x => new { x.date.Year, x.date.Month, x.date.Day, x.date.Hour })
+              .Select(g => (date: new DateTime(g.Key.Year, g.Key.Month, g.Key.Day, g.Key.Hour, 0, 0), temp: g.Average(x => x.value)))
+              .Select(x => new TimePoint(x.date, Math.Round(x.temp, 2))).ToList();
+
+            IDataset<TimePoint> dataset = new LineDataset<TimePoint>(results)
+                {
+                    Label = measurementDataSet.Caption,
+                    BackgroundColor = ColorUtil.FromDrawingColor(measurementDataSet.Color),
+                    BorderColor = ColorUtil.FromDrawingColor(measurementDataSet.Color),
+                    Fill = FillingMode.Disabled,
+                    CubicInterpolationMode = CubicInterpolationMode.Monotone
+                };
+
+            _config.Data.Datasets.Add(dataset);
         }
 
         _chart.Update();
     }
 
-    private void AddDataset()
-    {
-        string color = ColorUtil.FromDrawingColor(ChartColors.All[_config.Data.Datasets.Count % ChartColors.All.Count]);
-        IDataset<int> dataset = new LineDataset<int>(RandomScalingFactor(_config.Data.Labels.Count))
-            {
-                Label = $"Dataset {_config.Data.Datasets.Count}",
-                BackgroundColor = color,
-                BorderColor = color,
-                Fill = FillingMode.Disabled
-            };
+    //private void RandomizeData()
+    //{
+    //    foreach (IDataset<int> dataset in _config.Data.Datasets)
+    //    {
+    //        int count = dataset.Count;
+    //        dataset.Clear();
+    //        dataset.AddRange(RandomScalingFactor(count));
+    //    }
 
-        _config.Data.Datasets.Add(dataset);
-        _chart.Update();
-    }
+    //    _chart.Update();
+    //}
 
-    private void RemoveDataset()
-    {
-        IList<IDataset> datasets = _config.Data.Datasets;
-        if (datasets.Count == 0)
-            return;
+    //private void AddDataset()
+    //{
+    //    string color = ColorUtil.FromDrawingColor(ChartColors.All[_config.Data.Datasets.Count % ChartColors.All.Count]);
+    //    IDataset<int> dataset = new LineDataset<int>(RandomScalingFactor(_config.Data.Labels.Count))
+    //        {
+    //            Label = $"Dataset {_config.Data.Datasets.Count}",
+    //            BackgroundColor = color,
+    //            BorderColor = color,
+    //            Fill = FillingMode.Disabled
+    //        };
 
-        datasets.RemoveAt(datasets.Count - 1);
-        _chart.Update();
-    }
+    //    _config.Data.Datasets.Add(dataset);
+    //    _chart.Update();
+    //}
 
-    private void AddData()
-    {
-        if (_config.Data.Datasets.Count == 0)
-            return;
+    //private void RemoveDataset()
+    //{
+    //    IList<IDataset> datasets = _config.Data.Datasets;
+    //    if (datasets.Count == 0)
+    //        return;
 
-        string month = Months[_config.Data.Labels.Count % Months.Count];
-        _config.Data.Labels.Add(month);
+    //    datasets.RemoveAt(datasets.Count - 1);
+    //    _chart.Update();
+    //}
 
-        foreach (IDataset<int> dataset in _config.Data.Datasets)
-        {
-            dataset.Add(RandomScalingFactor());
-        }
+    //private void AddData()
+    //{
+    //    if (_config.Data.Datasets.Count == 0)
+    //        return;
 
-        _chart.Update();
-    }
+    //    string month = Months[_config.Data.Labels.Count % Months.Count];
+    //    _config.Data.Labels.Add(month);
 
-    private void RemoveData()
-    {
-        if (_config.Data.Datasets.Count == 0 ||
-            _config.Data.Labels.Count == 0)
-        {
-            return;
-        }
+    //    foreach (IDataset<int> dataset in _config.Data.Datasets)
+    //    {
+    //        dataset.Add(RandomScalingFactor());
+    //    }
 
-        _config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
+    //    _chart.Update();
+    //}
 
-        foreach (IDataset<int> dataset in _config.Data.Datasets)
-        {
-            dataset.RemoveAt(dataset.Count - 1);
-        }
+    //private void RemoveData()
+    //{
+    //    if (_config.Data.Datasets.Count == 0 ||
+    //        _config.Data.Labels.Count == 0)
+    //    {
+    //        return;
+    //    }
 
-        _chart.Update();
-    }
+    //    _config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
+
+    //    foreach (IDataset<int> dataset in _config.Data.Datasets)
+    //    {
+    //        dataset.RemoveAt(dataset.Count - 1);
+    //    }
+
+    //    _chart.Update();
+    //}
 }
